# fall_detection

./: .coverage  .coveragerc  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
configs/: default.yaml
configs/model/: custom_yolo.yaml  ori_detector.yaml  ori_detector_anchor.yaml
configs/pipeline/: default.yaml  yolo_world.yaml
configs/tools/: voc_to_yolo_example.yaml
configs/training/: classifier.yaml  detector.yaml  evaluate.yaml  feature_extraction.yaml  pipeline.yaml  pose.yaml  simple_classifier.yaml  simple_classifier_voc.yaml  tracker.yaml  yolo_world.yaml  yoloworld.yaml
data/: fall_detection.yaml  fall_pose.yaml
data/configs/: fall_detection.yaml
data/mini/: labels
data/yaml/: fall_detection.yaml  fall_detection_yolo_world.yaml
deployment/: VLM_ANNOTATION_README.md  YOLO_ANNOTATION_README.md  demo_tracker.py  run_pipeline_demo.py  split_dataset.py  vlm_annotate.py  yolo_annotate.py
docs/: DDP_BATCH_SIZE_EXPLAINED.md  DDP_TRAINING_FIX.md  pipeline_flow.html  yoloworld_pipeline.html
docs/api/: VLM_ANNOTATION_README.md  YOLO_ANNOTATION_README.md
docs/design/: 2026-03-31-end-to-end-test-pipeline.md  2026-03-31-fall-detection-design.md  2026-04-01-phased-training-pipeline.md  2026-04-04-tdd-development-90-coverage.md  pipeline_architecture.md
docs/development/: REFACTORING_ANALYSIS.md
docs/troubleshooting/: DDP_BATCH_SIZE_EXPLAINED.md  DDP_BATCH_SIZE_UPDATE.md
others/: debug.py  gen_ppt.py
outputs/simple_classifier/: config_used.yaml
requirements/: base.txt  test.txt  torch-cpu.txt  torch-cu118.txt  torch-cu121.txt  torch-cu124.txt  torch-cu128.txt
scripts/: benchmark_speed.py  convert_voc_to_yolo.py  demo_tracker.py  download_real_sample.py  download_sample_video.py  evaluate_pipeline.py  extract_features.py  generate_requirements.py  run_pipeline_debug.py  run_pipeline_demo.py  run_pipeline_demo_short.py  train_classifier.py  train_yolo_world.py  tune_tracker.py
scripts/demo/: run_pipeline_demo.py  run_yolo_world_pipeline.py  video_to_frames.py
scripts/eval/: benchmark_speed.py  evaluate_pipeline.py  tune_tracker.py
scripts/shell/: download_yolo_world_models.sh  install.sh  run_all_training.sh  run_evaluate_pipeline.sh  run_export_yolo_world.sh  run_extract_features.sh  run_pipeline_demo.sh  run_superpowers_server.sh  run_tests.sh  run_tracker_demo.sh  run_train_classifier.sh  run_train_detector.sh  run_train_pose.sh  run_train_simple_classifier.sh  run_train_yolo_world.sh  run_tune_tracker.sh  run_validate_yolo_world.sh
scripts/tools/: check_bbox_stats.py  convert_to_single_class.py  convert_voc_to_yolo.py  dedup_by_md5.py  extract_and_detect.py  find_noisy_labels.py  generate_requirements.py  generate_yoloworld_embeddings.py  split_dataset.py  test_custom_yolo.py  verify_voc_dataset.py
scripts/train/: export_yolo_world.py  extract_features.py  train_classifier.py  train_detector.py  train_pose.py  train_simple_classifier.py  train_yolo_world.py  validate_yolo_world.py  yoloworld_trainer.py
src/fall_detection/: __init__.py  classifier.py  detector.py  export.py  fusion.py  pipeline.py  pose_estimator.py  rules.py  tracker.py  (+2 more)
tests/: conftest.py  test_classifier.py  test_detector.py  test_export.py  test_fusion.py  test_pipeline.py  test_pose_estimator.py  test_rules.py  test_tracker.py  test_training_scripts.py
(+528 files in other folders)
