[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fall_detection"
version = "0.1.0"
description = "Edge-AI fall detection system targeting HiSilicon 3516C platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "PKU Cactus", email = "cactus@pku.edu.cn"}
]
keywords = ["fall-detection", "edge-ai", "yolov8", "computer-vision"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "ultralytics>=8.4.0",
    "opencv-python>=4.9.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "scipy>=1.10.0",
    "filterpy>=1.4.5",
    "tqdm>=4.65.0",
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0",
    "cleanlab>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]
# PyTorch CUDA variants - requires --extra-index-url during installation
# See: https://pytorch.org/get-started/locally/
# Install with: pip install --extra-index-url https://download.pytorch.org/whl/cu124 -e ".[torch-cu124,dev]"
torch-cpu = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
]
torch-cu118 = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
]
torch-cu121 = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
]
torch-cu124 = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
]
torch-cu128 = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
]
clip = [
    "git+https://github.com/openai/CLIP.git",
]
torch-cpu = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
]
torch-cu118 = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
]
torch-cu121 = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
]
torch-cu124 = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
]
torch-cu128 = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/pkuCactus/fall_detection"
Repository = "https://github.com/pkuCactus/fall_detection"
Documentation = "https://github.com/pkuCactus/fall_detection#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/fall_detection --cov-report=term-missing --cov-fail-under=90"

[tool.ruff]
line-length = 120
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501", "B008"]

[tool.ruff.per-file-ignores]
"tests/*" = ["F401", "F811"]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]
skip-string-normalization = true

[tool.coverage.run]
source = ["src/fall_detection"]
branch = true
omit = ["*/__pycache__/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]